--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "crowdsourced"
   ],
   "scripts": {
-    "start": "nodemon server/index.js",
+    "start": "./run-all.sh",
     "dev": "nodemon server/index.js",
     "test": "jest"
   },
@@ -43,6 +43,7 @@
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "mongoose": "^5.1.4",
+    "npm-run-all": "^4.1.3",
     "raccoon": "^0.2.8",
     "raccoon-heroku": "^0.1.9",
     "redis": "^2.8.0",
